# QuickSplashDemo

./: .gitignore  CMakeLists.txt  MainView.qml  README.md  Splash.qml  main.cpp  main.qml  qml.qrc
